src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_7_1.deca
// Description:
//    regle 2.7 condition, pas une méthode
//
// Resultats:
//    Ligne 10: A field 'a' already exists in super class.
class A {
    int a;
}
class B extends A {
    void a(){
    }
}